# poe-sdk-rs

./: .gitignore  .gitmessage  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  PLAN.md  README.md  REVIEW.md  SECURITY.md  SESSION2_PLAN.md  SESSION2_SPEC.md  SPEC.md  STYLE.md  TODO.md  acp.ymal
.antigravitycli/agents/: agent-creator.md
.gemini/agents/: agent-creator.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-pr.yml  ci-fail.lock.yml  ci-fail.md  ci.yml  codeql.yml  copilot-setup-steps.yml  dependency-review.yml  issue-triage.lock.yml  issue-triage.md  pr-fix.lock.yml  pr-fix.md  repo-assist.lock.yml  repo-assist.md
benches/: evaluation.rs
conductor/: learning-engine-plan.md
docs/: DONE.md  DONE_DETAILED.md  PLAN_V1.md  PRD.md  SPEC_V1.md  idea-extension-poe.md  overview-extension-gemini.md
docs/codedocs/: architecture.md  error-reporting.md  execution-pipeline.md  function-registry.md  index.md  runtime-data-model.md
examples/: advanced.rs  basic.rs
package/server/: Cargo.toml
scripts/: init.ps1  init.sh  release.sh  repo_health_check.py  setup-rust.sh
shared_memory/status/: maintenance_log.txt
src/: ast.rs  context.rs  diagnostics.rs  error.rs  eval.rs  functions.rs  lexer.rs  lib.rs  lib_tests.rs  parser.rs  plugins.rs  profiling.rs  span.rs  value.rs
src/builtins/: collection.rs  date.rs  functional.rs  higher_order.rs  logic.rs  math.rs  mod.rs  string.rs
tests/: config_validation.rs  error_snapshots.rs
tests/snapshots/: error_snapshots__error_snapshots__array_function_wrong_type.snap  error_snapshots__error_snapshots__division_by_zero.snap  error_snapshots__error_snapshots__invalid_token.snap  error_snapshots__error_snapshots__type_mismatch.snap  error_snapshots__error_snapshots__unclosed_array.snap  (+6 more)
(+13 files in other folders)
