[package]
name = "bl1z"
version = "0.2.0"
edition = "2021"
rust-version = "1.90.0"
authors = ["bl1z Team"]
description = "A high-performance, extensible formula evaluation engine for Rust"
license = "MIT OR Apache-2.0"
keywords = ["formula", "expression", "evaluation", "parser", "calculator"]
categories = ["parsing", "mathematics", "data-structures"]
homepage = "https://github.com/bl1nk-bot/bl1z"
repository = "https://github.com/bl1nk-bot/bl1z"
documentation = "https://docs.rs/bl1z"
readme = "README.md"
exclude = [
    ".github/",
    "docs/",
    "*.md",
    "!README.md",
]

[dependencies]
jiff = "0.2"
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
insta = "1.34"
pretty_assertions = "1.4"

[[bench]]
name = "evaluation"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1